--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.quizz.places.dialogs.HintsDialog" 
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
