--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
-    
+
     <application
+        android:name="com.quizz.places.application.QuizzPlacesApplication"
         android:allowBackup="true"
-        android:name=".application.QuizzPlacesApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -25,12 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name="com.quizz.places.dialogs.HintsDialog" 
+        <activity
+            android:name="com.quizz.places.dialogs.HintsDialog"
             android:theme="@android:style/Theme.Dialog" />
-        <activity 
-            android:name="com.quizz.places.dialogs.LevelSuccessDialog" 
+        <activity
+            android:name="com.quizz.places.dialogs.LevelSuccessDialog"
             android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name="com.quizz.places.activities.PictureFullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_picture_fullscreen"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
     </application>
 
 </manifest>
