--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,8 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
     <application
         android:name="com.quizz.places.application.QuizzPlacesApplication"
@@ -35,7 +37,6 @@
         <activity
             android:name="com.quizz.places.activities.PictureFullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_picture_fullscreen"
             android:theme="@style/FullscreenTheme" >
         </activity>
     </application>
