Added a label in section items that indicates the remaining pictures to find before unlocking the section

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/FullscreenTheme" >
         </activity>
+        <activity
+		    android:name="com.google.ads.AdActivity"
+		    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
     </application>
 
 </manifest>
