--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,14 @@
         <activity
 		    android:name="com.google.ads.AdActivity"
 		    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        
+        <!-- Used for install referral measurement-->
+		<service android:name="com.google.analytics.tracking.android.CampaignTrackingService"/>
+		<receiver android:name="com.google.analytics.tracking.android.CampaignTrackingReceiver" android:exported="true">
+		  <intent-filter>
+		    <action android:name="com.android.vending.INSTALL_REFERRER" />
+		  </intent-filter>
+		</receiver>
     </application>
 
 </manifest>
