--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,10 @@
 		    android:name="com.google.ads.AdActivity"
 		    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         
+        <activity
+            android:name="com.quizz.places.fragments.WikiActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        
         <!-- Used for install referral measurement-->
 		<service android:name="com.google.analytics.tracking.android.CampaignTrackingService"/>
 		<receiver android:name="com.google.analytics.tracking.android.CampaignTrackingReceiver" android:exported="true">
