--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name="com.quizz.places.dialogs.HintsDialog"
             android:theme="@android:style/Theme.Dialog" />
         <activity
+            android:name="com.quizz.places.dialogs.TutorialDialog"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
             android:name="com.quizz.places.dialogs.LevelSuccessDialog"
             android:theme="@android:style/Theme.Dialog" />
         <activity
