--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,6 +59,11 @@
 		    <action android:name="com.android.vending.INSTALL_REFERRER" />
 		  </intent-filter>
 		</receiver>
+
+    
+    
+    
+    <meta-data android:name="com.crashlytics.ApiKey" android:value="dca3714296fddc19177bc6f6583bfcb7469e8574"/>
     </application>
 
 </manifest>
